@@ -1,3 +1,9 @@
+xfsprogs-2.1.2 (17 July 2002)
+	- Fix up log stripe unit specification options, and update
+	  man page.  Also fix suffix handling for data su/sw options
+	  (disallow unit suffixes on -d sunit,swidth,sw and
+	  -l sunit).  Add "s" (512-byte sectors) as valid suffix.
+
 xfsprogs-2.1.1 (04 July 2002)
 	- Build infrastructure updates so that configure options can be
 	  used to specify paths rather than semi-hard-coded path names
